@@ -81,6 +81,7 @@ namespace Muon {
       const Trk::LayerArray* processTGCComponent(const GeoVPhysVol*&, Trk::TrapezoidVolumeBounds*&, HepGeom::Transform3D*&) const;
       std::pair<const Trk::Layer*,const std::vector<const Trk::Layer*>* > createLayerRepresentation(const Trk::TrackingVolume* trVol) const; 
       const Trk::Layer* createLayer(const Trk::TrackingVolume* trVol,Trk::ExtendedMaterialProperties*, HepGeom::Transform3D&) const; 
+      Identifier identifyNSW( std::string, HepGeom::Transform3D ) const;
    
       void printChildren(const GeoVPhysVol*) const ;
       // used to be private ..
