@@ -1,3 +1,7 @@
+2013-05-12 Sarka Todorova <sarka.todorova@cern.ch>
+	* bugfix in the position of NSW layers 
+	* tagged as MuonTrackingGeometry-00-05-55
+
 2013-05-03 Sarka Todorova <sarka.todorova@cern.ch>
 	* bugfix in the identification of NSW stations ( station layer representation)
 	* tagged as MuonTrackingGeometry-00-05-54
